--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="static/js/main.js" defer></script>
+    {% block javascript %}{% endblock %}
     <link rel="stylesheet" href="static/css/style.css">
     <title>Car-Carrier - Home</title>
 </head>
@@ -40,8 +41,7 @@
         </div>
 
         <div class="row content">
-            <h1>Home</h1>
-            <button id="buyButtonHome" class="buyButton">Buy now</button>
+            {% block content %}{% endblock %}
         </div>
 
         <div class="row footer">
