Changed File Structure
Added all HTML and JS files

--- a/src/templates/account/account.html
+++ b/src/templates/account/account.html
@@ -1,9 +1,9 @@
 {% extends "index.html" %}
 
 {% block javascript %}
-<script src="static/js/orders.js" defer></script>
+<script src="static/js/account/account.js" defer></script>
 {% endblock %}
 
 {% block content %}
-    <h1>Orders</h1>
+<h1>Account</h1>
 {% endblock %}
