--- a/src/templates/admin/roles.html
+++ b/src/templates/admin/roles.html
@@ -1,9 +1,9 @@
 {% extends "index.html" %}
 
 {% block javascript %}
-<script src="static/js/admin.js" defer></script>
+<script src="static/js/admin/roles.js" defer></script>
 {% endblock %}
 
 {% block content %}
-    <h1>Admin</h1>
+<h1>Roles</h1>
 {% endblock %}
