--- a/src/templates/home/home.html
+++ b/src/templates/home/home.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %}
 
 {% block javascript %}
-<script src="static/js/home.js" defer></script>
+<script src="static/js/home/home.js" defer></script>
 {% endblock %}
 
 {% block content %}
