--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,7 +25,7 @@
                     <button id="navButtonHome" class="navButton">Home</button>
                     <button id="navButtonCars" class="navButton">Cars</button>
                     <button id="navButtonOrders" class="navButton">Orders</button>
-                    <button id="navButtonHelp" class="navButton">Help</button>
+                    <button id="navButtonTickets" class="navButton">Tickets</button>
                     <button id="navButtonAdmin" class="navButton">Admin</button>
                 </div>
 
