--- a/src/templates/order/orders.html
+++ b/src/templates/order/orders.html
@@ -1,9 +1,9 @@
 {% extends "index.html" %}
 
 {% block javascript %}
-<script src="static/js/help.js" defer></script>
+<script src="static/js/order/orders.js" defer></script>
 {% endblock %}
 
 {% block content %}
-    <h1>Help</h1>
+<h1>Orders</h1>
 {% endblock %}
