Updated Orders Page

--- a/src/templates/order/orders.html
+++ b/src/templates/order/orders.html
@@ -6,4 +6,13 @@
 
 {% block content %}
 <h1>Orders</h1>
+<table id="orderTable">
+    <tr>
+        <th>Order ID</th>
+        <th>Car</th>
+        <th>Order Date</th>
+        <th>Price</th>
+        <th>Cancel</th>
+    </tr>
+</table>
 {% endblock %}
