--- a/src/templates/ticket/tickets.html
+++ b/src/templates/ticket/tickets.html
@@ -6,4 +6,15 @@
 
 {% block content %}
 <h1>Tickets</h1>
+<table id="ticketTable">
+    <tr>
+        <th>Ticket ID</th>
+        <th>Title</th>
+        <th>Owner</th>
+        <th>Created At</th>
+        <th>Updated At</th>
+        <th>Edit</th>
+        <th>Close</th>
+    </tr>
+</table>
 {% endblock %}
