--- a/src/templates/account/register.html
+++ b/src/templates/account/register.html
@@ -5,5 +5,27 @@
 {% endblock %}
 
 {% block content %}
-<h1>Register</h1>
+<h1>Create Account</h1>
+
+<div class="formGroup">
+    <label for="inputUsername">Username</label>
+    <input id="inputUsername" type="text">
+</div>
+
+<div class="formGroup">
+    <label for="inputPassword">Password</label>
+    <input id="inputPassword" type="password">
+</div>
+
+<div class="formGroup">
+    <label for="inputPassword2">Confirm Password</label>
+    <input id="inputPassword2" type="password">
+</div>
+
+<div id="errorbox" class="formGroup">
+    <p id="errorMessage"></p>
+</div>
+
+<button onclick="createAccount(event)">Create Account</button>
+
 {% endblock %}
