Changed Index page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="profile">
-                <button id="profileButtonHome" class="profileButton">Profile</button>
+                <button id="profileButton">Profile</button>
             </div>
 
         </div>
