--- a/src/templates/car/car.html
+++ b/src/templates/car/car.html
@@ -5,5 +5,23 @@
 {% endblock %}
 
 {% block content %}
-<h1>Car</h1>
+<div class="contentHeader">
+    <h1 id="carName">Test Car </h1>
+    <button class="backButton" onclick="back()">Back</button>
+</div>
+
+<div class="detailsContainer">
+    <div class="leftContiner">
+        <img>
+
+        <div class="controlsContainer">
+            <button class="buyButton" onclick="buyCar()">Buy</button>
+            <span class="price">10000$</span>
+        </div>
+    </div>
+
+    <div class="rightContiner">
+        <p class="description">Description</p>
+    </div>
+</div>
 {% endblock %}
