Updated Account Page

--- a/src/templates/account/account.html
+++ b/src/templates/account/account.html
@@ -5,5 +5,25 @@
 {% endblock %}
 
 {% block content %}
-<h1>Account</h1>
+<h1>Account Settings</h1>
+
+<div class="detailsContainer">
+    <label for="inputImage">Image</label>
+    <input id="inputImage" type="file" capture>
+
+    <label for="inputUsername">Username</label>
+    <input id="inputUsername" type="text" readOnly>
+
+    <label for="inputOldPassword">Old Password</label>
+    <input id="inputOldPassword" type="password">
+
+    <label for="inputPassword">New Password</label>
+    <input id="inputPassword" type="password">
+
+    <label for="inputPassword2">Confirm Password</label>
+    <input id="inputPassword2" type="password">
+
+    <button id="cancelButton" class="formButton" onclick="cancel()">Cancel</button>
+    <button id="saveButton" class="formButton" onclick="save()">Save</button>
+</div>
 {% endblock %}
