Updated Login / Register Page

--- a/src/templates/account/register.html
+++ b/src/templates/account/register.html
@@ -26,6 +26,6 @@
     <p id="errorMessage"></p>
 </div>
 
-<button onclick="createAccount(event)">Create Account</button>
+<button id="registerButton" class="formButton" onclick="createAccount(event)">Create Account</button>
 
 {% endblock %}
