--- a/src/templates/account/login.html
+++ b/src/templates/account/login.html
@@ -21,5 +21,5 @@
     <p id="errorMessage"></p>
 </div>
 
-<button onclick="login(event)">login</button>
+<button id="loginButton" class="formButton" onclick="login(event)">Login</button>
 {% endblock %}
