Updated Roles Page

--- a/src/templates/admin/roles.html
+++ b/src/templates/admin/roles.html
@@ -5,5 +5,16 @@
 {% endblock %}
 
 {% block content %}
+<button id="buttonUsers" class="navButton" onclick="users()">Users</button>
+<button id="buttonRoles" class="navButton" onclick="roles()">Roles</button>
+
 <h1>Roles</h1>
+<table id="rolesTable">
+    <tr>
+        <th>Role ID</th>
+        <th>Name</th>
+        <th>Edit</th>
+        <th>Remove</th>
+    </tr>
+</table>
 {% endblock %}
