--- a/src/templates/admin/user.html
+++ b/src/templates/admin/user.html
@@ -6,4 +6,28 @@
 
 {% block content %}
 <h1>User</h1>
+
+<div class="detailsContainer">
+    <label for="inputImage">Image</label>
+    <input id="inputImage" type="file" capture>
+
+    <label for="inputUsername">Username</label>
+    <input id="inputUsername" type="text" readOnly>
+
+    <label for="inputPassword">New Password</label>
+    <input id="inputPassword" type="password">
+
+    <label for="inputPassword2">Confirm Password</label>
+    <input id="inputPassword2" type="password">
+
+    <label for="inputRole">Role</label>
+    <select id="inputRole">
+        <option value="customer">Customer</option>
+        <option value="agent">Agent</option>
+        <option value="admin">Admin</option>
+    </select>
+
+    <button id="cancelButton" class="formButton" onclick="cancel()">Cancel</button>
+    <button id="saveButton" class="formButton" onclick="save()">Save</button>
+</div>
 {% endblock %}
