--- a/src/templates/home/home.html
+++ b/src/templates/home/home.html
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block content %}
-    <img>
+    <img id="homeImage" class="image">
     <button id="buyButtonHome" class="buyButton">Buy now</button>
 {% endblock %}
