Updated Cars Page
Added Style

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -113,3 +113,51 @@ button:hover {
   width: 100px;
   height: 100px;
 }
+
+#categorySelector {
+  height: 50px;
+  border-bottom: 1px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#categoryTitle {
+  padding-right: 10px;
+}
+
+#carTable {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 50%;
+  margin: auto;
+}
+
+.card {
+  min-width: 250px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+
+.card img {
+  width: 100%;
+  height: 150px
+}
+
+.card p {
+  align-self: flex-start
+}
