--- a/src/templates/car/cars.html
+++ b/src/templates/car/cars.html
@@ -6,7 +6,13 @@
 
 {% block content %}
 <div id="categorySelector">
-
+    <h3 id="categoryTitle">Category:</h3>
+    <div>
+        <button class="categoryButton">Sport</button>
+        <button class="categoryButton">SUV</button>
+        <button class="categoryButton">Sedan</button>
+        <button class="categoryButton">Roadster</button>
+    </div>
 </div>
 
 <div id="carTable">
