--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -144,14 +144,13 @@ button:hover {
   align-items: center;
   margin: 10px;
   cursor: pointer;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-
 
 .card img {
   width: 100%;
@@ -160,4 +159,41 @@ button:hover {
 
 .card p {
   align-self: flex-start
+}
+
+.carContainer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  padding: 10px;
+  grid-template-columns: 5% auto 30%;
+  grid-template-rows: 20% auto 25%;
+  grid-template-areas: "back header header" ". main sidebar" ". footer sidebar";
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.backButton {
+  grid-area: back;
+}
+
+.contentTitle {
+  grid-area: header;
+  margin-block: auto;
+}
+
+#carDetailImage {
+  grid-area: main;
+  width: 100%;
+  height: 100%;
+}
+
+.controlsContainer {
+  grid-area: footer;
+}
+
+#carDescription {
+  grid-area: sidebar;
+  margin: 0px;
 }
