Updated Orders Page
Added Style

--- a/src/templates/order/orders.html
+++ b/src/templates/order/orders.html
@@ -5,14 +5,19 @@
 {% endblock %}
 
 {% block content %}
-<h1>Orders</h1>
-<table id="orderTable">
-    <tr>
-        <th>Order ID</th>
-        <th>Car</th>
-        <th>Order Date</th>
-        <th>Price</th>
-        <th>Cancel</th>
-    </tr>
-</table>
+<div class="orderContainer">
+
+    <h1 class="contentTitle">Orders</h1>
+    <table id="orderTable" class="main">
+        <tr>
+            <th>Order ID</th>
+            <th>Car</th>
+            <th>Order Date</th>
+            <th>Price</th>
+            <th>Cancel</th>
+        </tr>
+    </table>
+
+</div>
+
 {% endblock %}
