--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -183,7 +183,7 @@ button:hover {
   margin-block: auto;
 }
 
-#carDetailImage {
+.main {
   grid-area: main;
   width: 100%;
   height: 100%;
@@ -196,4 +196,28 @@ button:hover {
 #carDescription {
   grid-area: sidebar;
   margin: 0px;
+}
+
+.orderContainer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  padding: 10px;
+  grid-template-columns: auto;
+  grid-template-rows: 10% auto;
+  grid-template-areas: "header" "main";
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+th, td {
+  padding: 15px;
+  text-align: left;
+  border-bottom: 1px solid black;
+}
+
+#orderTable {
+  height: auto;
+  border-spacing: 0px;
 }
