--- a/src/templates/car/car.html
+++ b/src/templates/car/car.html
@@ -10,7 +10,7 @@
     <button class="backButton" onclick="back()">Back</button>
     <h2 id="carName" class="contentTitle">Test Car </h2>
 
-    <img id="carDetailImage" class="image">
+    <img class="image main">
 
     <div class="controlsContainer">
         <button class="buyButton" onclick="buyCar()">Buy</button>
