--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -198,7 +198,7 @@ button:hover {
   margin: 0px;
 }
 
-.orderContainer {
+.orderContainer, .ticketContainer {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -217,7 +217,7 @@ th, td {
   border-bottom: 1px solid black;
 }
 
-#orderTable {
+#orderTable, #ticketTable {
   height: auto;
   border-spacing: 0px;
 }
