--- a/src/templates/ticket/tickets.html
+++ b/src/templates/ticket/tickets.html
@@ -5,16 +5,20 @@
 {% endblock %}
 
 {% block content %}
-<h1>Tickets</h1>
-<table id="ticketTable">
-    <tr>
-        <th>Ticket ID</th>
-        <th>Title</th>
-        <th>Owner</th>
-        <th>Created At</th>
-        <th>Updated At</th>
-        <th>Edit</th>
-        <th>Close</th>
-    </tr>
-</table>
+<div class="ticketContainer">
+
+    <h1 class="contentTitle">Tickets</h1>
+    <table id="ticketTable" class="main">
+        <tr>
+            <th>Ticket ID</th>
+            <th>Title</th>
+            <th>Owner</th>
+            <th>Created At</th>
+            <th>Updated At</th>
+            <th>Edit</th>
+            <th>Close</th>
+        </tr>
+    </table>
+
+</div>
 {% endblock %}
