Updated Tickets Page
Updated Style

--- a/src/templates/ticket/tickets.html
+++ b/src/templates/ticket/tickets.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="ticketContainer">
+<div class="ticketsContainer">
 
     <h1 class="contentTitle">Tickets</h1>
-    <table id="ticketTable" class="main">
+    <table id="ticketsTable" class="main">
         <tr>
             <th>Ticket ID</th>
             <th>Title</th>
