--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -161,7 +161,7 @@ button:hover {
   align-self: flex-start
 }
 
-.carContainer {
+.carContainer, .ticketContainer {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -169,7 +169,7 @@ button:hover {
   padding: 10px;
   grid-template-columns: 5% auto 30%;
   grid-template-rows: 20% auto 25%;
-  grid-template-areas: "back header header" ". main sidebar" ". footer sidebar";
+  grid-template-areas: "back header controls" ". main sidebar" ". footer sidebar";
   column-gap: 10px;
   row-gap: 10px;
 }
@@ -198,7 +198,7 @@ button:hover {
   margin: 0px;
 }
 
-.orderContainer, .ticketContainer {
+.orderContainer, .ticketsContainer {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -217,7 +217,7 @@ th, td {
   border-bottom: 1px solid black;
 }
 
-#orderTable, #ticketTable {
+#orderTable, #ticketsTable {
   height: auto;
   border-spacing: 0px;
 }
