--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -161,7 +161,7 @@ button:hover {
   align-self: flex-start
 }
 
-.carContainer, .ticketContainer {
+.carContainer {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -169,6 +169,19 @@ button:hover {
   padding: 10px;
   grid-template-columns: 5% auto 30%;
   grid-template-rows: 20% auto 25%;
+  grid-template-areas: "back header header" ". main sidebar" ". footer sidebar";
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.ticketContainer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  padding: 10px;
+  grid-template-columns: 5% auto 10%;
+  grid-template-rows: 15% auto 15%;
   grid-template-areas: "back header controls" ". main sidebar" ". footer sidebar";
   column-gap: 10px;
   row-gap: 10px;
@@ -191,6 +204,10 @@ button:hover {
 
 .controlsContainer {
   grid-area: footer;
+}
+
+.closeTicket {
+  grid-area: controls;
 }
 
 #carDescription {
@@ -220,4 +237,46 @@ th, td {
 #orderTable, #ticketsTable {
   height: auto;
   border-spacing: 0px;
+}
+
+#ticketHeader {
+  display: flex;
+  flex-direction: column;
+}
+
+#sendMessageContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+#messageInput {
+  width: 100%;
+  margin-right: 10px;
+  height: 100%;
+}
+
+input {
+  appearance: none;
+  font-family: inherit;
+  height: 50px;
+  font-size: 16px;
+  box-sizing: border-box
+}
+
+.message {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.message.tri-right {
+  text-align: right;
+}
+
+.message.tri-left {
+  text-align: left;
 }
