--- a/src/templates/ticket/ticket.html
+++ b/src/templates/ticket/ticket.html
@@ -5,20 +5,26 @@
 {% endblock %}
 
 {% block content %}
-<div class="contentHeader">
-    <button class="backButton" onclick="back()">Back</button>
-    <span id="ticketId">Ticket ID: </span>
-    <span id="ticketTitle">Ticket Title: </span>
-    <button id="closeTicketButton" onclick="closeTicket()">Close Ticket</button>
-</div>
+<div class="ticketContainer">
 
-<div class="detailsContainer">
-    <div id="messageContainer">
+    <button class="backButton" onclick="back()">Back</button>
+
+    <div id="ticketHeader" class="contentTitle">
+        <span id="ticketId">Ticket ID: </span>
+        <span id="ticketTitle">Ticket Title: </span>
     </div>
 
-    <div id="controlsContainer">
+    <button id="closeTicketButton" class="closeTicket" onclick="closeTicket()">Close Ticket</button>
+
+    <div id="messageContainer" class="main">
+
+    </div>
+
+    <div id="sendMessageContainer" class="controlsContainer">
         <input type="text" id="messageInput">
         <button id="sendMessageButton" onclick="sendMessage()">Send Message</button>
     </div>
+
 </div>
+
 {% endblock %}
