--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -187,6 +187,19 @@ button:hover {
   row-gap: 10px;
 }
 
+.usersContainer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  padding: 10px;
+  grid-template-columns: 5% auto 10%;
+  grid-template-rows: 15% 15% auto 15%;
+  grid-template-areas: "back admin ." ". header header" ". main sidebar" ". footer sidebar";
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
 .backButton {
   grid-area: back;
 }
@@ -234,7 +247,7 @@ th, td {
   border-bottom: 1px solid black;
 }
 
-#orderTable, #ticketsTable {
+#orderTable, #ticketsTable, #usersTable {
   height: auto;
   border-spacing: 0px;
 }
@@ -279,4 +292,8 @@ input {
 
 .message.tri-left {
   text-align: left;
+}
+
+.adminHeader {
+  grid-area: admin;
 }
