Updated Admin User Detail Page
Added Style

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -161,14 +161,14 @@ button:hover {
   align-self: flex-start
 }
 
-.carContainer {
+.carContainer, .userContainer {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
   display: grid;
   padding: 10px;
   grid-template-columns: 5% auto 30%;
-  grid-template-rows: 20% auto 25%;
+  grid-template-rows: 20% auto 10%;
   grid-template-areas: "back header header" ". main sidebar" ". footer sidebar";
   column-gap: 10px;
   row-gap: 10px;
@@ -296,4 +296,31 @@ input {
 
 .adminHeader {
   grid-area: admin;
+}
+
+#userControlContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.formButton {
+  width: 100%;
+}
+
+#userContent {
+  display: flex;
+  flex-direction: column;
+}
+
+.formGroup {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 0px;
+}
+
+.formGroup label {
+  width: 20%;
+  margin-block: auto;
 }
