--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -4,44 +4,141 @@ html, body {
   font-family: Verdana;
 }
 
-.box {
-  display: flex;
-  flex-flow: column;
+* {
+  font-family: Verdana;
+}
+
+/* ------------------------ CSS Grids Containers ------------------------ */
+
+.indexContainer {
+  box-sizing: border-box;
+  width: 100%;
   height: 100%;
+  display: grid;
+  grid-template-columns: 250px auto 160px;
+  grid-template-rows: 100px 10px auto;
+  grid-template-areas: "logo navigation profile" "borderTop borderTop borderTop" "main main main";
+  column-gap: 10px;
+  row-gap: 10px;
 }
 
-.box .row.header {
-  flex: 0 1 80px;
-}
-
-.box .row.content {
-  flex: 1 1 auto;
-}
-
-.box .row.footer {
-  flex: 0 1 100px;
-}
-
-.row.header {
-  display: flex;
-  flex-flow: row;
-  justify-content: space-between;
+.carContainer, .userContainer, .roleContainer, .accountContainer, .loginContainer, .registerContainer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: grid;
   padding: 10px;
-  border-bottom: 1px solid black;
+  grid-template-columns: 5% auto 30%;
+  grid-template-rows: 20% auto 10%;
+  grid-template-areas: "back header header" ". main sidebar" ". footer sidebar";
+  column-gap: 10px;
+  row-gap: 10px;
 }
 
-.row.footer {
-  border-top: 1px solid black;
+.ticketContainer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  padding: 10px;
+  grid-template-columns: 5% auto 10%;
+  grid-template-rows: 15% auto 15%;
+  grid-template-areas: "back header controls" ". main sidebar" ". footer sidebar";
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.usersContainer, .rolesContainer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  padding: 10px;
+  grid-template-columns: 5% auto 10%;
+  grid-template-rows: 15% 15% auto 15%;
+  grid-template-areas: "back admin ." ". header header" ". main sidebar" ". footer sidebar";
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.orderContainer, .ticketsContainer {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  padding: 10px;
+  grid-template-columns: auto;
+  grid-template-rows: 10% auto;
+  grid-template-areas: "header" "main";
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+/* ------------------------ CSS Grids Areas ------------------------ */
+
+.logo {
+  grid-area: logo;
 }
 
 .navigation {
+  grid-area: navigation;
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   justify-content: space-between;
-  flex-grow: 10;
-  padding: 0px 10px;
   flex-wrap: nowrap;
 }
+
+.profile {
+  grid-area: profile;
+}
+
+.borderTop {
+  border-top: 1px solid black;
+  grid-area: borderTop;
+}
+
+.borderBottom {
+  border-bottom: 1px solid black;
+  grid-area: borderBottom;
+}
+
+.content {
+  grid-area: main;
+}
+
+.backButton {
+  grid-area: back;
+}
+
+.contentTitle {
+  grid-area: header;
+  margin-block: auto;
+}
+
+.main {
+  grid-area: main;
+  width: 100%;
+  height: 100%;
+}
+
+.controlsContainer {
+  grid-area: footer;
+}
+
+.closeTicket {
+  grid-area: controls;
+}
+
+#carDescription {
+  grid-area: sidebar;
+  margin: 0px;
+}
+
+.adminHeader {
+  grid-area: admin;
+}
+
+/* ------------------------ CSS Flexbox Containers ------------------------ */
 
 .navigation .navbar, .navigation .search {
   display: flex;
@@ -49,14 +146,13 @@ html, body {
   justify-content: space-between;
 }
 
+/* ------------------------ Forms ------------------------ */
+
+
+/* ------------------------ Controls ------------------------ */
+
 .navButton {
   width: 100%;
-}
-
-.profile {
-  flex-grow: 0;
-  position: relative;
-  display: inline-block;
 }
 
 .logo {
@@ -72,6 +168,10 @@ button {
 
 button:hover {
   background-color: darkgray;
+}
+
+#profileButton {
+  width: 100%;
 }
 
 .searchbar {
@@ -161,85 +261,7 @@ button:hover {
   align-self: flex-start
 }
 
-.carContainer, .userContainer, .roleContainer, .accountContainer, .loginContainer, .registerContainer {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  padding: 10px;
-  grid-template-columns: 5% auto 30%;
-  grid-template-rows: 20% auto 10%;
-  grid-template-areas: "back header header" ". main sidebar" ". footer sidebar";
-  column-gap: 10px;
-  row-gap: 10px;
-}
 
-.ticketContainer {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  padding: 10px;
-  grid-template-columns: 5% auto 10%;
-  grid-template-rows: 15% auto 15%;
-  grid-template-areas: "back header controls" ". main sidebar" ". footer sidebar";
-  column-gap: 10px;
-  row-gap: 10px;
-}
-
-.usersContainer, .rolesContainer {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  padding: 10px;
-  grid-template-columns: 5% auto 10%;
-  grid-template-rows: 15% 15% auto 15%;
-  grid-template-areas: "back admin ." ". header header" ". main sidebar" ". footer sidebar";
-  column-gap: 10px;
-  row-gap: 10px;
-}
-
-.backButton {
-  grid-area: back;
-}
-
-.contentTitle {
-  grid-area: header;
-  margin-block: auto;
-}
-
-.main {
-  grid-area: main;
-  width: 100%;
-  height: 100%;
-}
-
-.controlsContainer {
-  grid-area: footer;
-}
-
-.closeTicket {
-  grid-area: controls;
-}
-
-#carDescription {
-  grid-area: sidebar;
-  margin: 0px;
-}
-
-.orderContainer, .ticketsContainer {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  padding: 10px;
-  grid-template-columns: auto;
-  grid-template-rows: 10% auto;
-  grid-template-areas: "header" "main";
-  column-gap: 10px;
-  row-gap: 10px;
-}
 
 th, td {
   padding: 15px;
@@ -293,9 +315,7 @@ input {
   text-align: left;
 }
 
-.adminHeader {
-  grid-area: admin;
-}
+
 
 #userControlContainer, #roleControlContainer, #accountControlContainer, #loginControlContainer, #registerControlContainer {
   display: flex;
