--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -15,7 +15,7 @@ html, body {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 250px auto 160px;
+  grid-template-columns: 250px auto 120px;
   grid-template-rows: 100px 10px auto;
   grid-template-areas: "logo navigation profile" "borderTop borderTop borderTop" "main main main";
   column-gap: 10px;
@@ -146,6 +146,24 @@ html, body {
   justify-content: space-between;
 }
 
+/* ------------------------ Dropdown ------------------------ */
+
+.dropdownContent {
+  display: none;
+  position: absolute;
+  min-width: 120px;
+}
+
+.dropdownContent button {
+  display: block;
+  width: 100%;
+}
+
+.show {
+  display: block;
+}
+
+
 /* ------------------------ Forms ------------------------ */
 
 
@@ -180,21 +198,6 @@ button:hover {
   height: 100%;
 }
 
-.dropdownContent {
-  display: none;
-  position: absolute;
-  right: 0;
-  min-width: 150px;
-}
-
-.dropdownContent button {
-  display: block;
-  width: 100%;
-}
-
-.show {
-  display: block;
-}
 
 #buyButtonHome {
   position: absolute;
