Updated Home Page
Updated Style
Added Common CSS Classes

--- a/src/templates/home/home.html
+++ b/src/templates/home/home.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block content %}
-    <img id="homeImage" class="image">
-    <button id="buyButtonHome" class="buyButton">Buy now</button>
+<div class="homeContainer full">
+    <img class="image full">
+    <button class="buyButton middle">Buy now</button>
+</div>
+
 {% endblock %}
