--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="profile">
-            <button id="profileButton" class="dropButton">Profile</button>
+            <button id="profileButton" class="dropButton full">Profile</button>
             <div id="guestContainer" class="dropdownContent">
                 <button id="registerButton" class="dropdownButton">Create Account</button>
                 <button id="loginButton" class="dropdownButton">Login</button>
