--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -163,6 +163,26 @@ html, body {
   display: block;
 }
 
+/* ------------------------ Common CSS Classes ------------------------ */
+
+.image {
+  padding: 10px;
+}
+
+.image.full, .full {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+}
+
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
 
 /* ------------------------ Forms ------------------------ */
 
