--- a/src/templates/home/home.html
+++ b/src/templates/home/home.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="homeContainer full">
     <img class="image full">
-    <button class="buyButton middle">Buy now</button>
+    <button id="buyButtonHome" class="buyButton middle">Buy now</button>
 </div>
 
 {% endblock %}
